--- a/index.html
+++ b/index.html
@@ -810,10 +810,9 @@
           Design that Speaks.<br>
           <span class="glow">Performance that Scales.</span>
         </h1>
-        <p class="lead reveal">We craft high-performance websites and digital experiences for ambitious SMEs. Blazing
-          fast, SEO-optimized, and visually stunning.</p>
+        <p class="lead reveal">We build websites that convert visitors into clients, fast, secure & SEO-optimized.</p>
         <div class="cta">
-          <a class="btn btn-primary" href="#contact">Start a Project</a>
+          <a class="btn btn-primary" href="#contact">Get Your Free Quote</a>
           <a class="btn btn-ghost" href="#services">Explore Services</a>
         </div>
       </div>
