--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Faisal Hussain — Web Design, Development & Digital Marketing</title>
+  <title>Orion Fx — Web Design, Development & Digital Marketing</title>
   <meta name="description"
     content="Modern, high‑performance web design & development, SEO and digital marketing services for SMEs in the local market. Dark, futuristic one‑page site." />
-  <meta property="og:title" content="Faisal Hussain — Web Design, Development & Digital Marketing" />
+  <meta property="og:title" content="Orion Fx — Web Design, Development & Digital Marketing" />
   <meta property="og:description"
     content="Modern, high‑performance web design & development, SEO and digital marketing services for SMEs in the local market." />
   <meta property="og:type" content="website" />
