--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       width: 100vw;
       height: 100vh;
       z-index: -2;
-      background: url('assets/background.png') no-repeat center center;
+      background: url('assets/animated-01.gif') no-repeat center center;
       background-size: cover;
     }
 
@@ -332,7 +332,7 @@
       border: 1px solid rgba(255, 255, 255, 0.15);
       transform: rotate(0deg) scale(0.9);
       z-index: 1;
-      animation: pulseBack 4s ease-in-out infinite alternate;
+      animation: pulseBack 5.3s ease-in-out infinite alternate;
       box-shadow: 0 30px 60px rgba(0, 0, 0, 0.5);
     }
 
@@ -343,7 +343,7 @@
       border: 1px solid rgba(255, 255, 255, 0.3);
       border-top: 1px solid rgba(255, 255, 255, 0.5);
       z-index: 2;
-      animation: rotateFront 5s ease-in-out infinite alternate;
+      animation: rotateFront 6.7s ease-in-out infinite alternate;
       box-shadow: 0 0 50px rgba(0, 229, 255, 0.2);
     }
 
@@ -362,14 +362,14 @@
       background: var(--primary);
       top: 25%;
       right: 25%;
-      animation: moveBlob1 5s ease-in-out infinite alternate;
+      animation: moveBlob1 6.7s ease-in-out infinite alternate;
     }
 
     .blob-2 {
       background: var(--accent);
       bottom: 25%;
       left: 25%;
-      animation: moveBlob2 5s ease-in-out infinite alternate;
+      animation: moveBlob2 6.7s ease-in-out infinite alternate;
     }
 
     @keyframes pulseBack {
